# tracky

./: .gitignore  Cargo.toml  audio_callback_process.txt  todo.txt
.github/workflows/: main.yaml
.run/: Install cargo vcpkg.run.xml  Run tracky release.run.xml  Run tracky.run.xml  Run.run.xml  Setup vcpkg.run.xml
app/: Cargo.toml
app/src/: keybindings.rs  main.rs
app/src/audio/: device.rs  frame.rs  player.rs  signal.rs
app/src/audio/dsp/: interpolation.rs  resampling.rs
app/src/audio/synthesis/: mod.rs
app/src/model/: channel.rs  midi.rs  pattern.rs
app/src/view/: channel.rs
signal/: Cargo.toml
signal/src/: frame.rs  lib.rs
src/: app.rs  color.rs  draw.rs  error.rs  event.rs  font_atlas.rs  game_loop_metrics.rs  handler.rs  key_bindings.rs  keybinding.rs  keybindings.rs  log.rs  main.rs  mono_font_atlas.rs  pattern.rs  renderer.rs  sound_test_main.rs  stats.rs  theme.rs  tracky.rs  tui.rs  utils.rs  value_object.rs
src/audio/: audio_channel.rs  channel.rs  device.rs  devices.rs  frame.rs  instrument.rs  mixer.rs  mod.rs  pcm_sample.rs  pcm_sample_player.rs  player.rs  signal.rs  sound.rs  stream.rs  value_object.rs
src/audio/dsp/: interpolation.rs  mod.rs  resampling.rs
src/audio/generation/: mod.rs
src/audio/midi/: mod.rs
src/audio/model/: signal.rs
src/audio/synthesis/: mod.rs
src/controller/: patterns.rs
src/model/: audio_channel.rs  camera.rs  channel.rs  column.rs  column_line.rs  field.rs  instrument.rs  midi.rs  mod.rs  pattern.rs  pattern_line.rs  patterns.rs  sample.rs  song.rs  song_info.rs
src/model/field/: input_unit.rs  mod.rs  note.rs  velocity.rs
src/model/pattern/: column.rs  column_line.rs  mod.rs  pattern.rs  patterns.rs
src/model/pattern/field/: mod.rs  note.rs  velocity.rs
src/model/playback/: mod.rs  preview.rs  song.rs
src/rendering/: app.rs  color.rs  font.rs  mod.rs  renderer.rs
src/service/: audio_channel.rs  channel.rs  field.rs  mod.rs  pattern.rs  patterns.rs  playback.rs  song.rs  tracky.rs  tracky_service.rs
src/shader/: bg-color-border.wgsl
src/view/: channel.rs  column.rs  column_line.rs  line.rs  mod.rs  pattern.rs  pattern_line.rs  patterns.rs  theme.rs
src/view/component/: column.rs  column_line.rs  mod.rs  pattern.rs  patterns.rs
src/view/field/: input_unit.rs  mod.rs  note.rs  velocity.rs
src/view/popup/: audio_device_selection.rs  change_volume.rs  input.rs  loading.rs  mod.rs  slider.rs
src/view/screen/: device_selection.rs  mod.rs  song_editor.rs
src/view/widget/: header.rs  input.rs  input_unit.rs  mod.rs  pattern_line.rs  slider.rs
src/widget/: input_unit.rs  line_widget.rs  mod.rs
