[package]
name = "tracky"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "signal"]

[dependencies]
ratatui = "0.29"
joy-value-object = { git = "https://github.com/sub07/rust-utils", version = "0.4.5" }
joy-collection-utils = { git = "https://github.com/sub07/rust-utils", version = "0.1.0" }
joy-macro = { git = "https://github.com/sub07/rust-utils", version = "0.2.4" }
joy-vector = { git = "https://github.com/sub07/rust-utils", version = "0.1.8", features = [
    "math",
] }
joy-iter = { git = "https://github.com/sub07/rust-utils", version = "0.1.0" }
joy-error = { git = "https://github.com/sub07/rust-utils", version = "0.1.3" }
anyhow = "1"
itertools = "0"
cpal = { version = "0.15" }
derivative = "2.2.0"
audrey = "0.3"
plotters = "0.3"
builder-pattern = "0"
log = "0.4"

[dev-dependencies]
approx = "0.5"

# [profile.dev.package."*"]
# opt-level = 3