[package]
name = "tracky"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["."]

[dependencies]
ratatui = { version = "0.29", default-features = false }
joy-value-object = { git = "https://github.com/sub07/rust-utils", version = "0.4.5" }
joy-collection-utils = { git = "https://github.com/sub07/rust-utils", version = "0.1.0" }
joy-macro = { git = "https://github.com/sub07/rust-utils", version = "0.2.4" }
joy-vector = { git = "https://github.com/sub07/rust-utils", version = "0.1.9", features = [
    "math",
] }
joy-iter = { git = "https://github.com/sub07/rust-utils", version = "0.1.0" }
joy-error = { git = "https://github.com/sub07/rust-utils", version = "0.1.3" }
anyhow = "1"
itertools = "0"
cpal = { version = "0.15" }
derivative = "2.2.0"
audrey = "0.3"
plotters = "0.3"
builder-pattern = { version = "0", default-features = false }
log = "0.4"
tui-input = { version = "0", default-features = false }
uid = "0"
pretty_env_logger = "0.5"
winit = "0.30"
ratatui-wgpu = { git = "https://github.com/sub07/ratatui-wgpu", rev = "71df0d0" }
futures-lite = "2.6"

[dev-dependencies]
approx = "0.5"

# [profile.dev.package."*"]
# opt-level = 3
